TIA: update MoxTest to allow prompting for user ID & password